# src/backend/web/json/swagger.json
@@ -411,6 +411,36 @@
               "description": "классификации<br /> json array"
             },
             {
+              "in": "query",
+              "name": "periodTenderFrom",
+              "type": "string",
+              "description": "период тендера, от"
+            },
+            {
+              "in": "query",
+              "name": "periodDeliveryFrom",
+              "type": "string",
+              "description": "период доставки, от"
+            },
+            {
+              "in": "query",
+              "name": "periodDeliveryTo",
+              "type": "string",
+              "description": "период доставки, до"
+            },
+            {
+              "in": "query",
+              "name": "buyersNames",
+              "type": "string",
+              "description": "названия заказчиков<br /> json array"
+            },
+            {
+              "in": "query",
+              "name": "buyersIdentifiers",
+              "type": "string",
+              "description": "коды заказчиков<br /> json array"
+            },
+            {
               "in":"query",
               "name":"pageSize",
               "type":"string",
